--- a/simulation/experiments/user_experience_rl.yaml
+++ b/simulation/experiments/user_experience_rl.yaml
@@ -1,36 +1,33 @@
-# Scenario where user experience based on job latency is the top criterium.
+# TODO: Scenario where user experience based on job latency is the top criterium.
 # Short jobs needs to be evaluated almost interactively, long jobs may be delayed much longer.
 # The objective is achieved by imposing limits on queues, only jobs that are expected to
 # take no more than given limit are allowed in (all queues remain active the whole time).
 # The key part of the scenario is the duration estimation algorithm used by dispatcher.
 
-# This configuration uses job dispatcher and SA strategy that estimates job duration
-# based on previous jobs (including ref. jobs). The SA fills an index (estimation structure),
-# dispatcher uses the duration index to make the estimates.
-
+# This configuration uses dispatcher and SA strategy based on neural-network regression estimator.
+# The NN is trained in batches of incoming jobs as the simulation progresses.
 
 # Workers could be either a number or a list that explicitly states a collection of attributes
 # If only a number is given, the workers are initialized with no attributes at the beginning.
 workers:
   - active: true
   - active: true
-    limit: 30.0
   - active: true
-    limit: 30.0
   - active: true
-    limit: 30.0
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.JobCategoryDispatcher
+dispatcher: experiments.user_experience_rl.dispatcher.JobCategoryDispatcher
 
 # self-adapting strategy component (same format as dispatcher)
 sa_strategy:
-  class: experiments.user_experience.sa_strategy.CategorySelfAdaptingStrategy
+  class: experiments.user_experience_rl.sa_strategy.CategorySelfAdaptingStrategy
   args:
-    - 2  # max. number of long worker queues
-    - "@@ref_jobs"
-period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
+    worker_count: 4
+    layers_widths: [50]  # each value represents a width of one hidden layer
+    ref_jobs: "@@ref_jobs"
+
+period: 86400  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
