--- a/simulation/experiments/user_experience_nn_embedding.yaml
+++ b/simulation/experiments/user_experience_nn_embedding.yaml
@@ -27,14 +27,14 @@ sa_strategy:
   class: experiments.user_experience_nn.sa_strategy_embedding.CategorySelfAdaptingStrategy
   args:
     layers_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
-    batch_size: 5000
+    batch_size: 500
     batch_epochs: 5
     ref_jobs: "@@ref_jobs"
     hash_converters: "@@hash_converters"
     embedding_training_data: "../data/release01-2021-12-29/exercise_tlgroup.csv"
     embedding_dim: 100
     embedding_batch_size: 5000
-    embedding_batch_epochs: 20
+    embedding_batch_epochs: 30
 
 
 period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
@@ -42,6 +42,7 @@ period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
   - metrics.default.JobDelayMetricsCollector
+  - metrics.quantile.JobDelayQuantilesCollector
   - class: metrics.user_experience.UserExperienceMetricsCollectorWithHistory
     args:
       - "@@ref_jobs"
