--- a/simulation/experiments/user_experience_rl2.yaml
+++ b/simulation/experiments/user_experience_rl2.yaml
@@ -38,6 +38,7 @@ period: 604800  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
   - metrics.default.JobDelayMetricsCollector
+  - metrics.quantile.JobDelayQuantilesCollector
   - class: metrics.user_experience.UserExperienceMetricsCollectorWithHistory
     args:
       ref_jobs: "@@ref_jobs"
