--- a/simulation/experiments/user_experience_nn_embedding.yaml
+++ b/simulation/experiments/user_experience_nn_embedding.yaml
@@ -20,11 +20,10 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience_nn.dispatcher.JobCategoryDispatcher
+dispatcher: experiments.user_experience.dispatcher.DurationFilterDispatcher
 
-# self-adapting strategy component (same format as dispatcher)
-sa_strategy:
-  class: experiments.user_experience_nn.sa_strategy_embedding.CategorySelfAdaptingStrategy
+duration_predictor:
+  class: experiments.user_experience_nn.nn_embedding_duration_predictor.NNEmbeddingDurationPredictor
   args:
     layers_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
     batch_size: 500
@@ -36,6 +35,11 @@ sa_strategy:
     embedding_batch_size: 5000
     embedding_batch_epochs: 50
 
+# self-adapting strategy component (same format as dispatcher)
+sa_strategy:
+  class: experiments.user_experience.sa_strategy.CategorySelfAdaptingStrategy
+  args:
+    ref_jobs: "@@ref_jobs"
 
 period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
