--- a/simulation/experiments/user_experience_rl_oracle.yaml
+++ b/simulation/experiments/user_experience_rl_oracle.yaml
@@ -18,31 +18,26 @@ workers:
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
 dispatcher:
-  class: experiments.user_experience_rl2_embedding.dispatcher.JobCategoryDispatcher
+  class: experiments.user_experience_rl.dispatcher.QNetworkDispatcher
   args:
+    worker_count: 4
     epsilon_initial: 0.3
     epsilon_final: 0.01
     epsilon_final_after_jobs: 10_000
+    q_network_args:
+      layers_widths: [70]  # each value represents a width of one hidden layer
+      replay_buffer_size: 100_000
+      gamma: 0.8
+
+duration_predictor: experiments.user_experience.oracle_duration_predictor.OracleDurationPredictor
 
 # self-adapting strategy component (same format as dispatcher)
 sa_strategy:
-  class: experiments.user_experience_rl2_embedding.sa_strategy.CategorySelfAdaptingStrategy
+  class: experiments.user_experience_rl.sa_strategy.QNetworkAdaptingStrategy
   args:
-    worker_count: 4
-    layers_widths_rl: [70]  # each value represents a width of one hidden layer
-    replay_buffer_size: 100_000
-    gamma: 0.8
-    layers_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
-    batch_size: 5000
-    batch_epochs: 5
     ref_jobs: "@@ref_jobs"
-    hash_converters: "@@hash_converters"
-    embedding_training_data: "../data/release01-2021-12-29/exercise_tlgroup.csv"
-    embedding_dim: 100
-    embedding_batch_size: 5000
-    embedding_batch_epochs: 20
 
-period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
+period: 604800  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
