Add RL configurations with training each 100 jobs

--- a/simulation/experiments/user_experience_rl_embedding_faster.yaml
+++ b/simulation/experiments/user_experience_rl_embedding_faster.yaml
@@ -59,5 +59,6 @@ metrics:
     args:
       ref_jobs: "@@ref_jobs"
       thresholds: [ 1.5, 3.0 ]
-      history_step: 10_000
+      #      history_step: 10_000
+      history_step: 100_000  # history step
       print_progress: True
