--- a/simulation/experiments/user_experience_rl_oracle.yaml
+++ b/simulation/experiments/user_experience_rl_oracle.yaml
@@ -48,5 +48,6 @@ metrics:
     args:
       ref_jobs: "@@ref_jobs"
       thresholds: [ 1.5, 3.0 ]
-      history_step: 10_000
+      #      history_step: 10_000
+      history_step: 100_000  # history step
       print_progress: True
