Refactor dispatchers and NNDurationPredictor to "online ML" architecture

--- a/simulation/experiments/user_experience_nn.yaml
+++ b/simulation/experiments/user_experience_nn.yaml
@@ -20,20 +20,14 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.DurationFilterDispatcher
+dispatcher: dispatchers.DurationFilterDispatcher
 
 duration_predictor:
-  class: experiments.user_experience_nn.nn_duration_predictor.NNDurationPredictor
+  class: duration_predictors.nn_duration_predictor.NNDurationPredictor
   args:
-    layers_widths: [ 1024 ]  # each value represents a width of one hidden layer
+    layer_widths: [ 1024 ]  # each value represents a width of one hidden layer
     batch_size: 500
     batch_epochs: 5
-
-# self-adapting strategy component (same format as dispatcher)
-sa_strategy:
-  class: experiments.user_experience.sa_strategy.CategorySelfAdaptingStrategy
-  args:
-    ref_jobs: "@@ref_jobs"
 
 period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
