--- a/simulation/experiments/user_experience_stats.yaml
+++ b/simulation/experiments/user_experience_stats.yaml
@@ -4,15 +4,15 @@
 # take no more than given limit are allowed in (all queues remain active the whole time).
 # The key part of the scenario is the duration estimation algorithm used by dispatcher.
 
-# This configuration uses job dispatcher with oracle that can guess the exact duration of a job.
-# The oracle is implemented by cheating, the estimate is taken from job.duration which should
-# not be accessed in dispatching in regular experiments.
-# The purpose of this configuration is to measure performance of the theoretical optimum as a reference point.
+# This configuration uses job dispatcher and SA strategy that estimates job duration
+# based on previous jobs (including ref. jobs). The SA fills an index (estimation structure),
+# dispatcher uses the duration index to make the estimates.
+
 
 # Workers could be either a number or a list that explicitly states a collection of attributes
 # If only a number is given, the workers are initialized with no attributes at the beginning.
 workers:
-  - active: true # first worker has no limit
+  - active: true
   - active: true
     limit: 30.0
   - active: true
@@ -22,9 +22,11 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.DurationFilterDispatcher
+dispatcher: dispatchers.DurationFilterDispatcher
 
-duration_predictor: experiments.user_experience.oracle_duration_predictor.OracleDurationPredictor
+duration_predictor: duration_predictors.statistical_duration_predictor.StatisticalDurationPredictor
+
+period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
