--- a/simulation/experiments/user_experience_limits.yaml
+++ b/simulation/experiments/user_experience_limits.yaml
@@ -20,9 +20,9 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.DurationFilterDispatcher
+dispatcher: dispatchers.DurationFilterDispatcher
 
-duration_predictor: experiments.user_experience.limits_duration_predictor.LimitsDurationPredictor
+duration_predictor: duration_predictors.limits_duration_predictor.LimitsDurationPredictor
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
