--- a/simulation/experiments/user_experience_ml_deeco.yaml
+++ b/simulation/experiments/user_experience_ml_deeco.yaml
@@ -26,7 +26,7 @@ dispatcher: experiments.user_experience_ml_deeco.dispatcher.JobCategoryDispatche
 sa_strategy:
   class: experiments.user_experience_ml_deeco.sa_strategy.CategorySelfAdaptingStrategy
   args:
-    layers_widths: [ 1024 ]  # each value represents a width of one hidden layer
+    layer_widths: [ 1024 ]  # each value represents a width of one hidden layer
     batch_size: 500
     batch_epochs: 5
     ref_jobs: "@@ref_jobs"
