--- a/simulation/experiments/user_experience_rl_embedding_fast.yaml
+++ b/simulation/experiments/user_experience_rl_embedding_fast.yaml
@@ -25,7 +25,7 @@ dispatcher:
     epsilon_final: 0.01
     epsilon_final_after_jobs: 10_000
     q_network_args:
-      layers_widths: [ 70 ]  # each value represents a width of one hidden layer
+      layer_widths: [ 70 ]  # each value represents a width of one hidden layer
       replay_buffer_size: 100_000
       gamma: 0.8
 
@@ -33,7 +33,7 @@ dispatcher:
 duration_predictor:
   class: experiments.user_experience_nn.nn_embedding_duration_predictor.NNEmbeddingDurationPredictor
   args:
-    layers_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
+    layer_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
     batch_size: 500
     batch_epochs: 5
     ref_jobs: "@@ref_jobs"
