--- a/simulation/experiments/user_experience_nn_embedding.yaml
+++ b/simulation/experiments/user_experience_nn_embedding.yaml
@@ -20,26 +20,20 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.DurationFilterDispatcher
+dispatcher: dispatchers.DurationFilterDispatcher
 
 duration_predictor:
-  class: experiments.user_experience_nn.nn_embedding_duration_predictor.NNEmbeddingDurationPredictor
+  class: duration_predictors.nn_embedding_duration_predictor.NNEmbeddingDurationPredictor
   args:
     layer_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
     batch_size: 500
     batch_epochs: 5
-    ref_jobs: "@@ref_jobs"
     hash_converters: "@@hash_converters"
     embedding_training_data: "../data/release02-2023-01-04/exercise_tlgroup.csv"
     embedding_dim: 100
     embedding_batch_size: 5000
-    embedding_batch_epochs: 50
+    embedding_batch_epochs: 100
 
-# self-adapting strategy component (same format as dispatcher)
-sa_strategy:
-  class: experiments.user_experience.sa_strategy.CategorySelfAdaptingStrategy
-  args:
-    ref_jobs: "@@ref_jobs"
 
 period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
