--- a/simulation/experiments/user_experience_rl_oracle.yaml
+++ b/simulation/experiments/user_experience_rl_oracle.yaml
@@ -26,13 +26,13 @@ worker_selector:
   args:
     # inference
     epsilon_initial: 0.3
-    epsilon_final: 0.01
-    epsilon_final_after_jobs: 10_000
+    epsilon_final: 0.001
+    epsilon_final_after_jobs: 25_000
     # training
     layer_widths: [ 70 ]  # each value represents a width of one hidden layer
     replay_buffer_size: 100_000
     gamma: 0.8
-    training_interval: 1  # number of jobs between training of the Q network
+    training_interval: 10  # number of jobs between training of the Q network
     batch_size: 1000
 
 period: 604800  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
@@ -45,6 +45,6 @@ metrics:
     args:
       ref_jobs: "@@ref_jobs"
       thresholds: [ 1.5, 3.0 ]
-      history_step: 10_000
-#      history_step: 100_000  # history step
-      print_progress: True
+#      history_step: 10_000
+      history_step: 100_000  # history step
+#      print_progress: True
