--- a/simulation/experiments/user_experience_rl_oracle_fast.yaml
+++ b/simulation/experiments/user_experience_rl_oracle_fast.yaml
@@ -26,8 +26,8 @@ worker_selector:
   args:
     # inference
     epsilon_initial: 0.3
-    epsilon_final: 0.01
-    epsilon_final_after_jobs: 10_000
+    epsilon_final: 0.001
+    epsilon_final_after_jobs: 25_000
     # training
     layer_widths: [ 70 ]  # each value represents a width of one hidden layer
     replay_buffer_size: 100_000
@@ -45,6 +45,6 @@ metrics:
     args:
       ref_jobs: "@@ref_jobs"
       thresholds: [ 1.5, 3.0 ]
-      history_step: 10_000
-#      history_step: 100_000  # history step
-      print_progress: True
+#      history_step: 10_000
+      history_step: 100_000  # history step
+#      print_progress: True
