Experiments with only 1 worker for short jobs

--- a/simulation/experiments/user_experience_rl_nn_fast.yaml
+++ b/simulation/experiments/user_experience_rl_nn_fast.yaml
@@ -1,13 +1,11 @@
-# Scenario where user experience based on job latency is the top criterium.
+# TODO: Scenario where user experience based on job latency is the top criterium.
 # Short jobs needs to be evaluated almost interactively, long jobs may be delayed much longer.
 # The objective is achieved by imposing limits on queues, only jobs that are expected to
 # take no more than given limit are allowed in (all queues remain active the whole time).
 # The key part of the scenario is the duration estimation algorithm used by dispatcher.
 
-# This configuration uses job dispatcher and SA strategy that estimates job duration
-# based on previous jobs (including ref. jobs). The SA fills an index (estimation structure),
-# dispatcher uses the duration index to make the estimates.
-
+# This configuration uses dispatcher and SA strategy based on neural-network regression estimator.
+# The NN is trained in batches of incoming jobs as the simulation progresses.
 
 # Workers could be either a number or a list that explicitly states a collection of attributes
 # If only a number is given, the workers are initialized with no attributes at the beginning.
@@ -16,15 +14,35 @@ workers:
   - active: true
   - active: true
   - active: true
-    limit: 30.0
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: dispatchers.DurationFilterDispatcher
+dispatcher: dispatchers.WorkerSelectorDispatcher
 
-duration_predictor: duration_predictors.statistical_duration_predictor.StatisticalDurationPredictor
+worker_selector:
+  class: worker_selectors.q_network_worker_selector.QNetworkWorkerSelector
+  args:
+    # inference
+    epsilon_initial: 0.3
+    epsilon_final: 0.001
+    epsilon_final_after_jobs: 25_000
+    # training
+    layer_widths: [70]  # each value represents a width of one hidden layer
+    replay_buffer_size: 100_000
+    gamma: 0.8
+    training_interval: 100  # number of jobs between training of the Q network
+    batch_size: 1000
 
-period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
+# duration predictor component (same format as dispatcher)
+duration_predictor:
+  class: duration_predictors.nn_duration_predictor.NNDurationPredictor
+  args:
+    layer_widths: [ 512, 256 ]  # each value represents a width of one hidden layer
+    training_interval: 500
+    batch_size: 1000
+    training_epochs: 5
+
+period: 604800  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
