--- a/simulation/experiments/user_experience_limits.yaml
+++ b/simulation/experiments/user_experience_limits.yaml
@@ -1,25 +1,22 @@
-# Scenario where user experience based on job latency is the top criterium.
-# Short jobs needs to be evaluated almost interactively, long jobs may be delayed much longer.
-# The objective is achieved by imposing limits on queues, only jobs that are expected to
-# take no more than given limit are allowed in (all queues remain active the whole time).
-# The key part of the scenario is the duration estimation algorithm used by dispatcher.
+# This baseline configuration uses duration predictor that estimates job duration based on the job limits.
 
-# This baseline configuration uses only a job dispatcher (no SA) that estimates job duration
-# based on the job limits.
-
-# Workers could be either a number or a list that explicitly states a collection of attributes
+# Workers could be either a number or a list that explicitly states a collection of attributes.
 # If only a number is given, the workers are initialized with no attributes at the beginning.
+# We want all the workers to be 'active'
 workers:
-  - active: true # first worker has no limit
-  - active: true
-  - active: true
-  - active: true
+  - active: true # one worker dedicated to short jobs only
     limit: 30.0
+  - active: true
+  - active: true
+  - active: true
 
-# dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
-# where class is fully qualified class name and args is list or dict holding constructor arguments
+# Dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
+# where class is fully qualified class name and args is list or dict holding constructor arguments.
+# The class should implement the `AbstractDispatcher` interface
 dispatcher: dispatchers.DurationFilterDispatcher
 
+# Duration predictor: same format as the dispatcher.
+# The class should implement the `AbstractDurationPredictor` interface
 duration_predictor: duration_predictors.limits_duration_predictor.LimitsDurationPredictor
 
 # list of metric components (each one is in the same format as dispatcher)
@@ -31,5 +28,5 @@ metrics:
       ref_jobs: "@@ref_jobs"
       thresholds: [ 1.5, 3.0 ]
 #      history_step: 10_000
-      history_step: 100_000  # history step
+      history_step: 100_000
 #      print_progress: True
